# rosbag_recorder

./: CMakeLists.txt  README.md  package.xml
config/: recorder_config.yaml  recorder_config_humble.yaml
foxglove/: README.md  rosbag_recorder_dashboard.json  rosbag_recorder_layout.json
include/rosbag_recorder/: rosbag_recorder_node.hpp
launch/: rosbag_recorder.launch.py  rosbag_recorder_params.launch.py  test_recorder.launch.py
msg/: RosbagRecorderStatus.msg
src/: main.cpp  rosbag_recorder_node.cpp
